fixed heading spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,7 +64,4 @@ ul {
   text-decoration-line: underline;
 }
 
-.metadata {
-  color: #82888f;
-  line-height: 1.75rem;
-}
+
