--- a/src/app/styles/post.module.css
+++ b/src/app/styles/post.module.css
@@ -1,3 +1,3 @@
 .title {
-    font-size: 3em;
+    font-size: 2rem;
 }
